# AntennaSim

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy-pages.yml  docker-publish.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: deps.py  router.py
backend/src/converters/: maa_export.py  maa_import.py  nec_file.py
backend/src/core/: exceptions.py  rate_limiter.py
backend/src/models/: antenna.py  ground.py  limits.py  optimization.py  results.py  simulation.py
backend/src/simulation/: cache.py  nec_input.py  nec_output.py  nec_runner.py  optimizer.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/api/: client.ts  nec.ts  types.ts
frontend/src/data/: changelog.ts
frontend/src/engine/: limits.ts  segmentation.ts  types.ts
frontend/src/hooks/: useChartTheme.ts
frontend/src/pages/: AboutPage.tsx  EditorPage.tsx  LearnPage.tsx  LibraryPage.tsx  NotFoundPage.tsx  SimulatorPage.tsx
mcp/: .gitignore  Dockerfile  Dockerfile.dev  README.md  __init__.py  constants.py  ham_bands.py  pattern_helpers.py  pyproject.toml  server.py  simulator.py  templates.py  utils.py
mcp/tests/: conftest.py  test_server.py
nginx/: nginx.conf
scripts/: dev.sh
shared/: antenna-templates.json  ham-bands.json
(+128 files in other folders)
